<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activies.ActivityLogin">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/frame_black_green_transparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launch_white" />


        <EditText
            android:id="@+id/login_student_number_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_green_pink_frame_selector"
            android:gravity="center"
            android:hint="@string/login_student_number_text"
            android:inputType="number"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/login_student_id_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_green_pink_frame_selector"
            android:gravity="center"
            android:hint="@string/login_student_sfzh_text"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/login_student_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_green_pink_frame_selector"
            android:gravity="center"
            android:hint="@string/login_student_password_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/frame_black_green_transparent"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/login_student_check_code_ed"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_green_pink_frame_selector"
                android:gravity="center"
                android:hint="@string/login_student_check_code_text"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" />

            <ImageView
                android:id="@+id/login_check_code_iv"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/frame_black_green_transparent"
                android:padding="2dp"

                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/login_fresh_check_code_bt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginLeft="4dp"
                android:background="@drawable/button_refresh_selector" />

        </LinearLayout>


        <Button
            android:id="@+id/login_student_login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_green_pink_frame_selector"
            android:text="@string/login_student_login_bt_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:text="@string/login_copyright_text" />

    </LinearLayout>

</LinearLayout>
